--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.18.1
+  # flutter_svg: ^0.18.1
+  flutter_svg: ^0.20.0-nullsafety.3
   font_awesome_flutter: ^8.8.1
   smooth_star_rating: ^1.1.1
   table_calendar: ^2.2.3
@@ -41,6 +42,8 @@ dependencies:
   flutter_html_view: ^0.5.12
   razorpay_flutter: ^1.2.2
   fluttertoast: ^7.1.1
+  form_field_validator: ^1.0.1
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/fonts/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
