--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   provider: ^5.0.0
   rflutter_alert: ^2.0.4
   carousel_slider: ^4.0.0
+  lazy_load_scrollview: 1.3.0
+
+  google_maps_flutter: any
+  geolocator: any
+  location: any
 
 dev_dependencies:
   flutter_test:
