--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_svg: ^0.20.0-nullsafety.3
   font_awesome_flutter: ^8.8.1
   smooth_star_rating: ^1.1.1
-  table_calendar: ^2.2.3
+  table_calendar: ^3.0.3
   giffy_dialog: ^1.8.0
   image_picker: ^0.6.7+12
   pin_code_text_field: ^1.7.1
@@ -48,6 +48,10 @@ dependencies:
   rflutter_alert: ^2.0.4
   carousel_slider: ^4.0.0
   lazy_load_scrollview: 1.3.0
+  url_launcher: ^5.7.10
+  syncfusion_flutter_calendar: ^19.3.46
+  intl: ^0.17.0
+  modal_bottom_sheet:
 
   google_maps_flutter: any
   geolocator: any
