--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   geolocator: any
   location: any
 
+  vertical_tabs: ^0.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
